fixed clippy

--- a/CrystalBallSolution/CrystalBallWebSite/Content/Site.css
+++ b/CrystalBallSolution/CrystalBallWebSite/Content/Site.css
@@ -22,10 +22,11 @@
     border: 1px solid #2980b9;
     margin: 15px;
     padding: 5px;
-    background-image: url("../images/background-road.jpg");
+    background-image: url("../images/clippy.png");
     background-repeat: no-repeat;
     background-position: center left;
     padding-left: 150px;
+    height: 130px;
    
 }
 
